# secern

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: audit.yaml  ci.yaml
examples/: dns_takeover_azure.yaml
src/: config.rs  main.rs
