[package]
name = "secern"
version = "0.9.1"
authors = ["Tom Sellers <tom@fadedcode.net>"]
description = """
secern is a command line string sifting program that leverages
regex patterns defined in a configuration file to sift data into
specified output files.
"""
repository = "https://github.com/TomSellers/secern"
homepage = "https://github.com/TomSellers/secern"
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
license = "Unlicense OR MIT"
edition = "2024"

[[bin]]
bench = false
path = "src/main.rs"
name = "secern"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
env_logger = "0.11"
log = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_derive = "1.0"


[profile.release]
lto = "fat"
#codegen-units = 1
#debug = true
